--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,1 +1,27 @@
-h1 home
+.logo
+  = link_to '/' do
+    | forefront
+
+.nav
+  ul
+    li class="active"
+      = link_to 'HOME', '#'
+    li
+      = link_to 'IF FOREFRONT', '#'
+    li
+      = link_to 'SERVICES', '#'
+    li
+      = link_to 'REFERENCES', '#'
+    li
+      = link_to 'FRONTIERS', '#'
+    li
+      = link_to 'BLOG', '#'
+
+.boxes.isotope
+  .box test
+  .box.box-w2 test
+  .box test
+  .box test
+  .box test
+  .box test
+  .box test
