--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= yield %>
+    <div id="wrapper">
+      <div id="main">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
