--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -43,7 +43,6 @@ $box-gap-width: 12px
 $box-gap-height: 13px
 $box-double-width: $box-width * 2 + $box-gap-width
 $box-double-height: $box-height * 2 + $box-gap-height
-
 .box
   width: $box-width
   height: 288px
@@ -51,5 +50,13 @@ $box-double-height: $box-height * 2 + $box-gap-height
   margin-left: 12px
   margin-top: 13px
   background: gray
+  text-align: center
+  .icon-lightbulb
+    font-size: 140px
+  p
+    padding: 0 15px
+
 .box-double
   width: $box-double-width
+
+
