--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -18,7 +18,13 @@
       = link_to 'BLOG', '#'
 
 .boxes.isotope
-  .box test
+  .box
+    i.icon-lightbulb
+    h3 BUSINESS DESIGN
+    p
+      | Cretivity, design, flexibility. Important words, 
+        which we believe creates future business, 
+        Do you agree?
   .box.box-double test
   .box test
   .box test
