--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,25 +1,9 @@
-.logo
-  = link_to '/' do
-    | forefront
-
-.nav
-  ul
-    li class="active"
-      = link_to 'HOME', '#'
-    li
-      = link_to 'IF FOREFRONT', '#'
-    li
-      = link_to 'SERVICES', '#'
-    li
-      = link_to 'REFERENCES', '#'
-    li
-      = link_to 'FRONTIERS', '#'
-    li
-      = link_to 'BLOG', '#'
+= render 'header'
 
 .boxes.isotope
   .box
-    i.icon-lightbulb
+    p
+      i.icon-lightbulb
     h3 BUSINESS DESIGN
     p
       | Cretivity, design, flexibility. Important words, 
@@ -27,7 +11,5 @@
         Do you agree?
   .box.box-double test
   .box test
-  .box test
-  .box test
-  .box test
+  .box.box-triple
   .box test
