--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -8,7 +8,17 @@
       | Cretivity, design, flexibility. Important words, 
         which we believe creates future business, 
         Do you agree?
-  .box.box-double test
-  .box test
+  .box.box-double#work_the_line
+    .image-text
+      | WE HELP OUR CUSTOMERS ALONG THE JOURNEY FROM
+      br
+      | STRATEGY TO RESPONSE
+  .box#box-074
+    .show-more-link.hide
+      Take a peek at more stylish Frontiers
+    .name.left-name MAGNUS
+  .box#box-107
+    .show-more-link.hide
+      Take a peek at more stylish Frontiers
+    .name.right-name MAGNUS
   .box.box-triple
-  .box test
