--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,6 @@
  *
  *= require normalize
  *= require _font-awesome
- *= require_self
- *= require_tree .
+ *= require isotope
+ *= require base
  */
