Add js route and Load the box content via ajax
* Add path.js, used by js route
* Load the box contents via ajax

--- a/app/views/home/_header.slim
+++ b/app/views/home/_header.slim
@@ -5,9 +5,9 @@
 .nav
   ul
     li class="active"
-      = link_to 'HOME', '/'
+      = link_to 'HOME', '/#/home'
     li
-      = link_to 'IF FOREFRONT', if_forefront_path
+      = link_to 'IF FOREFRONT', '/#/if_forefront'
     li
       = link_to 'SERVICES', '#'
     li
