--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -6,6 +6,9 @@ html
 h3
   font-size: 16px
 
+ul
+  list-style-type: none
+
 .hide
   display: none
 
@@ -57,7 +60,7 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   height: 288px
   background-color: white
   margin-left: 12px
-  margin-top: 13px
+  margin-top: 12px
   text-align: center
   cursor: pointer
 
@@ -116,3 +119,7 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
 #box-107
   background-image: url('/assets/107.png')
   background-position: -261px 0
+
+.icon-box
+  i, h3
+    color: #e1733d
