fix merge conflicts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
   <body>
     <div id="wrapper">
       <div id="main">
-        <%= yield %>
+        <%= render 'home/header' %>
+        <div class="box-container isotope">
+          <%= yield %>
+        </div>
       </div>
     </div>
   </body>
