--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -23,3 +23,21 @@
   .name.right-name MAGNUS
 
 .box.box-triple
+  div.slide
+    ul.tabs
+      li.active
+        |apple
+      li
+        |pear
+      li
+        |peach
+    div.tab.active
+      |tab 1
+    div.tab
+      |tab 2
+    div.tab
+      |tab 3
+    ul.bullets
+      li.active
+      li
+      li
