add blank box in all pages

--- a/app/views/home/_header.slim
+++ b/app/views/home/_header.slim
@@ -9,10 +9,10 @@
     li
       = link_to 'IF FOREFRONT', '/#/if_forefront'
     li
-      = link_to 'SERVICES', '#'
+      = link_to 'SERVICES', '/#/services'
     li
-      = link_to 'REFERENCES', '#'
+      = link_to 'REFERENCES', '/#/references'
     li
-      = link_to 'FRONTIERS', '#'
+      = link_to 'FRONTIERS', '/#/frontiers'
     li
-      = link_to 'BLOG', '#'
+      = link_to 'BLOG', '/#/blog'
