--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -22,22 +22,6 @@
     Take a peek at more stylish Frontiers
   .name.right-name MAGNUS
 
-.box.box-triple
-  div.slide
-    ul.tabs
-      li.active
-        |apple
-      li
-        |pear
-      li
-        |peach
-    div.tab.active
-      |tab 1
-    div.tab
-      |tab 2
-    div.tab
-      |tab 3
-    ul.bullets
-      li.active
-      li
-      li
+.box
+.box
+.box
