--- a/app/views/home/references.slim
+++ b/app/views/home/references.slim
@@ -2,3 +2,21 @@
 .box.box-triple
 .box
 .box.box-triple
+  div.slide
+    ul.tabs
+      li.active
+        |apple
+      li
+        |pear
+      li
+        |peach
+    div.tab.active
+      |tab 1
+    div.tab
+      |tab 2
+    div.tab
+      |tab 3
+    ul.bullets
+      li.active
+      li
+      li
