Add loading css and js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <div class="loading hide">
+      <div class="loading-mask"></div>
+    </div>
+
     <div id="wrapper">
       <div id="main">
         <%= render 'home/header' %>
