--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -13,13 +13,13 @@
     | STRATEGY TO RESPONSE
 
 .box#box-074
-  .show-more-link.hide
-    Take a peek at more stylish Frontiers
+  .show-more-link
+    |Take a peek at more stylish Frontiers
   .name.left-name MAGNUS
 
 .box#box-107
-  .show-more-link.hide
-    Take a peek at more stylish Frontiers
+  .show-more-link
+    |Take a peek at more stylish Frontiers
   .name.right-name MAGNUS
 
 .box
