--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -12,12 +12,12 @@
     br
     | STRATEGY TO RESPONSE
 
-.box#box-074
+.box.employ-074.pointer
   .show-more-link
     |Take a peek at more stylish Frontiers
   .name.left-name MAGNUS
 
-.box#box-107
+.box.employ-107.pointer
   .show-more-link
     |Take a peek at more stylish Frontiers
   .name.right-name MAGNUS
