--- a/app/views/home/frontiers.slim
+++ b/app/views/home/frontiers.slim
@@ -1,16 +1,18 @@
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
-.box
+= 4.times.each do
+  .box.employ-box.employ-107
+    .name.right-name MAGNUS
+    .shade
+      .employment-number
+        | # 199
+      .employment-details
+        = mail_to "test@shinetechchina.com"
+
+= 4.times.each do
+  .box.employ-box.employ-074
+    .name.left-name MAGNUS
+    .shade
+      .employment-number
+        | # 11
+      .employment-details
+        = mail_to "test@shinetechchina.com"
+
