--- a/app/views/home/blog.slim
+++ b/app/views/home/blog.slim
@@ -1,10 +1,53 @@
-.box
-.box
-.box
-.box
-.box.box-expanded
-.box
-.box
-.box.box-expanded
-.box
-.box
+= 4.times.each do
+  .box.shade-box.image-flag
+    .shade
+      .posted-date
+        | 06/25/2013
+      .first-comment
+        | Yes!
+          Summer reading has come in the mail!
+          Thanks # ffcg!
+      .nick-name
+        | cim_d
+
+.box.box-expanded.shade-box.image-ued
+  .shade
+    .posted-date
+      | 06/25/2013
+    .first-comment
+      | Part of the trade is working at night, alone, with no distractions or maybe it's just me :...
+    .nick-name
+      | cim_d
+
+= 2.times.each do
+  .box.shade-box.image-flag
+    .shade
+      .posted-date
+        | 06/25/2013
+      .first-comment
+        | Yes!
+          Summer reading has come in the mail!
+          Thanks # ffcg!
+      .nick-name
+        | cim_d
+
+.box.box-expanded.shade-box.image-ued
+  .shade
+    .posted-date
+      | 06/25/2013
+    .first-comment
+      | Part of the trade is working at night, alone, with no distractions or maybe it's just me :...
+    .nick-name
+      | cim_d
+
+= 2.times.each do
+  .box.shade-box.image-flag
+    .shade
+      .posted-date
+        | 06/25/2013
+      .first-comment
+        | Yes!
+          Summer reading has come in the mail!
+          Thanks # ffcg!
+      .nick-name
+        | cim_d
