--- a/app/views/home/frontiers.slim
+++ b/app/views/home/frontiers.slim
@@ -1,5 +1,5 @@
 = 4.times.each do
-  .box.employ-box.employ-107
+  .box.shade-box.employ-107
     .name.right-name MAGNUS
     .shade
       .employment-number
@@ -8,7 +8,7 @@
         = mail_to "test@shinetechchina.com"
 
 = 4.times.each do
-  .box.employ-box.employ-074
+  .box.shade-box.employ-074
     .name.left-name MAGNUS
     .shade
       .employment-number
