--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,27 +1,35 @@
-.box.pointer
-  i.icon-lightbulb
-  h3 BUSINESS DESIGN
-  p
-    | Cretivity, design, flexibility. Important words, 
-      which we believe creates future business, 
-      Do you agree?
+.item
+  .box.pointer.box-icon.box-icon-origin
+    .mini
+      i.icon-lightbulb.icon
+      h3 BUSINESS DESIGN
+      p
+        | Cretivity, design, flexibility. Important words, 
+          which we believe creates future business, 
+          Do you agree?
 
-.box.box-double#work_the_line
-  .image-text
-    | WE HELP OUR CUSTOMERS ALONG THE JOURNEY FROM
-    br
-    | STRATEGY TO RESPONSE
+.item
+  .box.box-double#work_the_line
+    .image-text
+      | WE HELP OUR CUSTOMERS ALONG THE JOURNEY FROM
+      br
+      | STRATEGY TO RESPONSE
 
-.box.employ-074.pointer
-  .show-more-link
-    |Take a peek at more stylish Frontiers
-  .name.left-name MAGNUS
+.item
+  .box.employ-074.pointer
+    .show-more-link
+      |Take a peek at more stylish Frontiers
+    .name.left-name MAGNUS
 
-.box.employ-107.pointer
-  .show-more-link
-    |Take a peek at more stylish Frontiers
-  .name.right-name MAGNUS
+.item
+  .box.employ-107.pointer
+    .show-more-link
+      |Take a peek at more stylish Frontiers
+    .name.right-name MAGNUS
 
-.box.pointer
-.box.pointer
-.box.pointer
+.item
+  .box.pointer
+.item
+  .box.pointer
+.item
+  .box.pointer
