--- a/app/views/home/if_forefront.slim
+++ b/app/views/home/if_forefront.slim
@@ -1,4 +1,8 @@
-.box.box-double
-.box.box-double
-.box.box-double
-.box
+.item
+  .box.box-double
+.item
+  .box.box-double
+.item
+  .box.box-double
+.item
+  .box
