--- a/app/views/home/services.slim
+++ b/app/views/home/services.slim
@@ -1,6 +1,10 @@
-.box
-.box
-.box.box-expanded
-.box test
-.box test
-
+.item
+  .box
+.item
+  .box
+.item
+  .box.box-expanded
+.item
+  .box test
+.item
+  .box test
