split css attributes from box and add to image-box, profile-box

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -67,6 +67,7 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   background-color: white
   text-align: center
 
+.box-profile
   .name
     color: #f4f2ed
     line-height: 25px
@@ -100,6 +101,7 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
     .show-more-link
       opacity: 1
 
+.box-image
   .image-text
     text-shadow: 0 1px 3px rgba(0, 0, 0, .25)
     text-transform: uppercase
