--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -9,20 +9,20 @@
           Do you agree?
 
 .item
-  .box.box-double#work_the_line
+  .box.box-image.box-double#work_the_line
     .image-text
       | WE HELP OUR CUSTOMERS ALONG THE JOURNEY FROM
       br
       | STRATEGY TO RESPONSE
 
 .item
-  .box.employ-074.pointer
+  .box.box-profile.employ-074.pointer
     .show-more-link
       |Take a peek at more stylish Frontiers
     .name.left-name MAGNUS
 
 .item
-  .box.employ-107.pointer
+  .box.box-profile.employ-107.pointer
     .show-more-link
       |Take a peek at more stylish Frontiers
     .name.right-name MAGNUS
