--- a/app/views/home/frontiers.slim
+++ b/app/views/home/frontiers.slim
@@ -1,6 +1,6 @@
 = 4.times.each do
   .item
-    .box.shade-box.employ-107
+    .box.box-profile.shade-box.employ-107
       .name.right-name MAGNUS
       .shade
         .employment-number
@@ -10,7 +10,7 @@
 
 = 4.times.each do
   .item
-    .box.shade-box.employ-074
+    .box.box-profile.shade-box.employ-074
       .name.left-name MAGNUS
       .shade
         .employment-number
