add link to nick-name

--- a/app/views/home/blog.slim
+++ b/app/views/home/blog.slim
@@ -9,7 +9,7 @@
             Summer reading has come in the mail!
             Thanks # ffcg!
         .nick-name
-          | cim_d
+          = link_to "cim_d", "#"
 
 .item
   .box.box-expanded.shade-box.image-ued
@@ -19,7 +19,7 @@
       .first-comment
         | Part of the trade is working at night, alone, with no distractions or maybe it's just me :...
       .nick-name
-        | cim_d
+        = link_to "cim_d", "#"
 
 = 2.times.each do
   .item
@@ -32,7 +32,7 @@
             Summer reading has come in the mail!
             Thanks # ffcg!
         .nick-name
-          | cim_d
+          = link_to "cim_d", "#"
 
 .item
   .box.box-expanded.shade-box.image-ued
@@ -42,7 +42,7 @@
       .first-comment
         | Part of the trade is working at night, alone, with no distractions or maybe it's just me :...
       .nick-name
-        | cim_d
+        = link_to "cim_d", "#"
 
 = 2.times.each do
   .item
@@ -55,4 +55,4 @@
             Summer reading has come in the mail!
             Thanks # ffcg!
         .nick-name
-          | cim_d
+          = link_to "cim_d", "#"
