--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -212,17 +212,35 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   -o-transition-duration: 0.5s
   transition-duration: 0.5s
 
-  .mini
-    top: 25px
-    position: absolute
   .icon
     font-size: 120px
   h3
     font-size: 14px
+    font-weight: 400
   p
-    font-size: 14px
-    padding: 0 15px
     color: #969289
+
+  .mini, .maxi
+    top: 25px
+    position: absolute
+
+  .mini
+    p
+      font-size: 14px
+      padding: 0 15px
+
+  .maxi
+    text-align: left
+    padding-left: 30px
+    padding-right: 60px
+    .icon
+      float: right
+      margin: 0 0 25px 25px
+    h3
+      margin-bottom: 30px
+    p
+      font-size: 16px
+      line-height: 1.5
 
 .box-icon-origin
   &:hover
@@ -230,6 +248,11 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   .icon, h3
     color: #e1733d
 
+.box-icon-cfc4a5
+  &:hover
+    border-color: #cfc4a5
+  .icon, h3
+    color: #cfc4a5
 
 .box-double
   width: $box-double-width
