Add slide css in blue box
* Add blue box css
* Add slide css in blue box

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -1,7 +1,8 @@
 html
   background-color: #f5f1ed
-  font-size: 14px
   font-family: 'proxima-nova','Helvetica Neue',Arial,Helvetica,sans-serif
+  font-size: 14px
+  color: #969289
 
 h3
   font-size: 16px
@@ -16,6 +17,10 @@ ul
 
 .pointer
   cursor: pointer
+
+::selection
+  background-color: #f7941e
+  color: white
 
 #wrapper
   margin: 0 auto
@@ -68,6 +73,10 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   height: 288px
   background-color: white
   text-align: center
+
+.box-blue
+  background: #9dc0c8
+  color: white
 
 .box-profile
   .name
