Add links to homepage

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -12,15 +12,18 @@ ul
   padding: 0
   list-style-type: none
 
+a
+  text-decoration: none
+
+::selection
+  background-color: #f7941e
+  color: white
+
 .hide
   display: none
 
 .pointer
   cursor: pointer
-
-::selection
-  background-color: #f7941e
-  color: white
 
 #wrapper
   margin: 0 auto
