--- a/app/assets/stylesheets/slide.sass
+++ b/app/assets/stylesheets/slide.sass
@@ -11,6 +11,7 @@
   li
     display: inline
     margin: 0 2em 0 0
+    cursor: pointer
 
   .active
     color: #f7941e
@@ -45,6 +46,7 @@
 
   li
     padding: 0 4px
+    cursor: pointer
 
   li.active
     color: #f7941e
