--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,5 +1,5 @@
 .item
-  .box.pointer.box-icon.box-icon-origin
+  .box.pointer.box-icon.box-icon-origin onclick="location = '/#/services'"
     .mini
       i.icon-lightbulb.icon
       h3 BUSINESS DESIGN
@@ -16,20 +16,29 @@
       | STRATEGY TO RESPONSE
 
 .item
-  .box.box-profile.employ-074.pointer
+  .box.box-profile.employ-074.pointer onclick="location = '/#/frontiers'"
     .show-more-link
-      |Take a peek at more stylish Frontiers
+      | Take a peek at more stylish Frontiers
     .name.left-name MAGNUS
 
 .item
-  .box.box-profile.employ-107.pointer
+  .box.box-profile.employ-107.pointer onclick="location = '/#/frontiers'"
     .show-more-link
-      |Take a peek at more stylish Frontiers
+      | Take a peek at more stylish Frontiers
     .name.right-name MAGNUS
 
 .item
-  .box.pointer
+  .box.pointer onclick="location = '/#/references'"
 .item
-  .box.pointer
+  .box.pointer.shade-box.image-flag onclick="location = '/#/blog'"
+    .shade
+      .posted-date
+        | 06/25/2013
+      .first-comment
+        | Yes!
+          Summer reading has come in the mail!
+          Thanks # ffcg!
+      .nick-name
+        = link_to "cim_d", "#"
 .item
   .box.pointer
