--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -1,5 +1,5 @@
 .item
-  .box.pointer.box-icon.box-icon-origin onclick="location = '/#/services'"
+  .box.pointer.box-icon.box-icon-darkorigin onclick="location = '/#/services'"
     .mini
       i.icon-lightbulb.icon
       h3 BUSINESS DESIGN
