--- a/app/views/home/services.slim
+++ b/app/views/home/services.slim
@@ -3,7 +3,7 @@
 .item
   .box.box-expandable
 .item
-  .box.box-expandable.box-expanded.box-icon.box-icon-cfc4a5
+  .box.box-expandable.box-expanded.box-icon.box-icon-brown
     .mini
       i.icon-lightbulb.icon
       h3 BUSINESS TRANSFORMATION
