changed footer text

--- a/app/views/home/_footer.slim
+++ b/app/views/home/_footer.slim
@@ -1,14 +1,11 @@
 .footer
   .footer-wrapper
     h1
-      | wuhan shinetech Consulting Group
+      | Wuhan shinetech outsourcing group
     .location
-      | Hitechbuilding · Sveavägen 9 · 111 57 ·
-      = link_to "Stockholm", '#'
-      | &nbsp;|&nbsp;World Trade Center · Jungmansgatan 12 · 211 19 ·
-      = link_to "Malmö", '#'
+      | LuoYu street 312-5104 · WuChang · Wuhan · Hubei · China
     .contact
-      | 08-888 888 88 · 
-      = link_to "info@shinetechchina.com", '#'
+      | +86 10 8202 9769 · 
+      = mail_to "sales@shinetechchina.com"
     .copyright
-      | Copyright © 2013 by wuhan website
+      | Copyright © 2013 by shinetechchian wuhan
